# reference_repo

./: .env  .gitignore  docker-compose.yml  gepeto.py  main.py  playground.py  playground2.py  prompt.txt  pyproject.toml  readme.md  requirements.txt
app/: main.py  worker.py
app/clients/db/: mongodb_client.py  postgres_client.py  redis_client.py
app/clients/service/: twilio_client.py  twlio_client.py
app/clients/worker/: celery_client.py
app/core/: config.py
app/entities/agents/api/v1/docs/: agent_docs.py
app/entities/sample/models/: sample_models.py
app/entities/sample/services/: sample_service.py
app/monitoring/: logging.py
